objects/AME_project_cloud_Success_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>AME_project_cloud_Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Parameter__c</fullName>
        <label>Parameter</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charter</label>
        <referenceTo>AME_project_cloud_Project_Charter__c</referenceTo>
        <relationshipLabel>Success Criteria</relationshipLabel>
        <relationshipName>Success_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Success Criteria</relationshipLabel>
        <relationshipName>Success_Criteria_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Partially Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Target__c</fullName>
        <label>Target</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Verification_Method__c</fullName>
        <label>Verification Method</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Success Criteria</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Success Criteria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>